Fri Jul 27 10:55:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Generate UML diagrams, assume stl is buildin

Fri Jul 27 08:57:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Upgraded with doxygen -u

Thu Jul 26 16:22:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
        * docs/bczar/bczar.html:
          Improved instructions

Thu Jul 26 14:40:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Set all environment variables explicitly before running the doxygen
          script

Thu Jul 26 10:19:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ARGV.h:
        * ace/Arg_Shifter.h:
          Doxygen improvements

        * rpmbuild/ace-tao.spec:
          Removed ACE_XML_Utils, only compiled when xercesc is enabled

Thu Jul 26 09:31:19 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/make_release.py:
        * docs/Download.html:
        * docs/bczar/bczar.html:
          Updated for x.1.3 release

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
        * etc/index.html:
          Removed deprecated tag

Thu Jul 26 09:12:26 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.3 released.

Fri Jul 20 17:37:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>
