@@ -1,3 +1,8 @@
+Sat Jul 28 19:22:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/make_release.py:
+          Fixed exclude
+
 Fri Jul 27 10:55:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/ace.doxygen:
